--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Rahul Dahake | Resume</title>
 	<link href="css/app.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" />
+	<meta name="google-site-verification" content="pixERPdqMAzTImjZRQMuxJz0CFnVZCrGHry6Y7U7ehA" />
 </head>
 <body>
 	<div id="app">
